fix- scrollbar css issues and zombie list item- deploy

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,9 +210,9 @@ p {
  * Chrome Scrollbar
  */
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
 	display: none;
-}
+} */
 
 
 /**
@@ -421,7 +421,7 @@ td:first-child:hover~td {
 } */
 
 @media only screen and (max-width: 768px) {
-	
+
 	html {
 		margin-left: 1rem;
 		margin-right: 1rem;
